--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -10,15 +10,31 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editReminderTime"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:contentDescription="@string/time"
-            android:ems="10"
-            android:importantForAutofill="no"
-            android:inputType="time" />
+            android:layout_weight="8"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/editReminderTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/time"
+                android:ems="10"
+                android:importantForAutofill="no"
+                android:inputType="time"
+                android:text="@string/time" />
+
+            <EditText
+                android:id="@+id/editAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="text"
+                android:text="@string/amount"
+                tools:text="@string/amount" />
+        </LinearLayout>
 
         <ImageButton
             android:id="@+id/deleteReminder"
