--- a/app/src/main/res/layout/fragment_medicine.xml
+++ b/app/src/main/res/layout/fragment_medicine.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".MedicineFragment">
 
     <View
@@ -13,7 +13,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -36,7 +36,7 @@
                 android:src="@android:drawable/ic_menu_edit" />
 
             <ImageButton
-                android:id="@+id/deleteReminder"
+                android:id="@+id/deleteMedicine"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
