--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -6,7 +6,7 @@
     tools:context=".MedicinesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/medicineEntities"
+        android:id="@+id/medicineList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
