First step in reminder edit implementation

--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -37,7 +37,7 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/deleteMedicine"
+            android:id="@+id/deleteReminder"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
