--- a/app/src/main/res/layout/activity_edit_medicine.xml
+++ b/app/src/main/res/layout/activity_edit_medicine.xml
@@ -5,29 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".EditMedicine">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/editMedicineName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/editMedicineName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:ems="10"
-            android:inputType="text" />
-
-        <ImageButton
-            android:id="@+id/saveMedicineButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:contentDescription="@string/confirm"
-            android:src="@android:drawable/ic_menu_save" />
-    </LinearLayout>
+        android:ems="10"
+        android:inputType="text" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reminderList"
