--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,1 +1,6 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"/>
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+    <Preference
+        app:key="version"
+        app:summary=""
+        app:title="App version" />
+</PreferenceScreen>
