--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -60,7 +60,8 @@
                 android:id="@+id/latestReminders"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollIndicators="right" />
+                android:scrollIndicators="right"
+                android:scrollbars="vertical" />
 
         </LinearLayout>
 
