--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -9,7 +9,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/medicineList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical">
 
     </androidx.recyclerview.widget.RecyclerView>
 
