--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,9 +1,11 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
     <Preference
+        app:icon="@android:drawable/ic_notification_clear_all"
         app:key="clear_events"
         app:summary=""
         app:title="@string/clear_events" />
     <Preference
+        app:icon="@android:drawable/ic_dialog_info"
         app:key="version"
         app:summary=""
         app:title="@string/app_version" />
