--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:labelFor="@id/editAmount"
+            android:singleLine="true"
             android:text="@string/amount" />
 
         <EditText
