--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -31,14 +31,15 @@
                 android:id="@+id/nextReminderInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:lines="2" />
+                android:lines="2"
+                android:text="@string/hourglass" />
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_margin="5dp"
         android:layout_weight="1"
         app:cardCornerRadius="10dp"
