--- a/app/src/main/res/layout/fragment_reminder.xml
+++ b/app/src/main/res/layout/fragment_reminder.xml
@@ -42,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:ems="10"
+            android:hint="@string/amount"
             android:importantForAutofill="no"
             android:inputType="text"
             android:text="@string/amount" />
