--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,6 +1,4 @@
 <resources>
-    <!-- Reply Preference -->
-
     <string-array name="delete_entries_titles">
         <item>@string/swipe_left</item>
         <item>@string/long_press</item>
@@ -8,5 +6,19 @@
     <string-array name="delete_entries_values">
         <item>0</item>
         <item>1</item>
+    </string-array>
+    <string-array name="overview_events_titles">
+        <item>@string/four_hours</item>
+        <item>@string/twelve_hours</item>
+        <item>@string/twenty_four_hours</item>
+        <item>@string/two_days</item>
+        <item>@string/three_days</item>
+    </string-array>
+    <string-array name="overview_events_values">
+        <item>4</item>
+        <item>12</item>
+        <item>24</item>
+        <item>48</item>
+        <item>72</item>
     </string-array>
 </resources>
