--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,5 +1,20 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <SwitchPreference
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:defaultValue="true"
+        android:title="@string/show_notifications"
+        app:key="show_notification" />
+    <ListPreference
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:defaultValue="24"
+        android:entries="@array/overview_events_titles"
+        android:entryValues="@array/overview_events_values"
+        android:title="@string/overview_events"
+        app:key="overview_events"
+        app:useSimpleSummaryProvider="true" />
     <ListPreference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,7 +27,7 @@
     <PreferenceCategory
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="@string/actions"/>
+        android:title="@string/actions" />
     <Preference
         app:icon="@android:drawable/ic_menu_save"
         app:key="export"
@@ -26,7 +41,7 @@
     <PreferenceCategory
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="@string/information"/>
+        android:title="@string/information" />
     <Preference
         app:icon="@android:drawable/ic_dialog_info"
         app:key="version"
