--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="5dp"
     android:orientation="vertical"
-    tools:context=".OverviewFragment">
+    tools:context=".overview.OverviewFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
