--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MedicinesFragment">
+    tools:context=".medicine.MedicinesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/medicineList"
