--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="5dp"
-    android:theme="@style/Theme.Material3.DayNight.Dialog"
     tools:context=".ColorPicker">
 
     <com.skydoves.colorpickerview.ColorPickerView
@@ -20,6 +19,6 @@
         android:id="@+id/colorOk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="@string/ok" />
+        android:layout_gravity="center"
+        android:text="@string/take_over" />
 </LinearLayout>
