--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -6,6 +6,13 @@
         android:defaultValue="true"
         android:title="@string/show_notifications"
         app:key="show_notification" />
+    <SwitchPreference
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:defaultValue="false"
+        android:title="@string/exact_reminders"
+        app:isPreferenceVisible="false"
+        app:key="exact_reminders" />
     <ListPreference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
