--- a/app/src/main/res/drawable/capsule.xml
+++ b/app/src/main/res/drawable/capsule.xml
@@ -3,7 +3,7 @@
     android:height="16dp"
     android:viewportWidth="16"
     android:viewportHeight="16">
-  <path
-      android:pathData="M1.828,8.9 L8.9,1.827a4,4 0,1 1,5.657 5.657l-7.07,7.071A4,4 0,1 1,1.827 8.9ZM10.956,9.671 L13.849,6.778a3,3 0,1 0,-4.243 -4.242L6.713,5.429z"
-      android:fillColor="#000000"/>
+    <path
+        android:fillColor="?android:colorForeground"
+        android:pathData="M1.828,8.9 L8.9,1.827a4,4 0,1 1,5.657 5.657l-7.07,7.071A4,4 0,1 1,1.827 8.9ZM10.956,9.671 L13.849,6.778a3,3 0,1 0,-4.243 -4.242L6.713,5.429z" />
 </vector>
