--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -10,6 +10,7 @@
         android:id="@+id/medicineList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:scrollbars="vertical">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -19,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_margin="8dp"
         android:clickable="true"
         android:contentDescription="@string/add_medicine"
         android:text="@string/add_medicine"
