--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -6,6 +6,13 @@
         android:defaultValue="true"
         android:title="@string/show_notifications"
         app:key="show_notification" />
+    <com.takisoft.preferencex.RingtonePreference
+        android:defaultValue="content://settings/system/notification_sound"
+        android:ringtoneType="notification"
+        android:showDefault="true"
+        android:title="@string/notification_tone_title"
+        app:key="notification_ringtone"
+        app:pref_summaryHasRingtone="%s" />
     <SwitchPreference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
