--- a/app/src/main/res/layout/activity_edit_medicine.xml
+++ b/app/src/main/res/layout/activity_edit_medicine.xml
@@ -28,7 +28,7 @@
             android:inputType="text"
             android:singleLine="true" />
 
-        <com.google.android.material.switchmaterial.SwitchMaterial
+        <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/enableColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
