Layout improvements Added helper for localized date/time string

--- a/app/src/main/res/layout/fragment_reminder_table.xml
+++ b/app/src/main/res/layout/fragment_reminder_table.xml
@@ -8,6 +8,7 @@
     <com.evrencoskun.tableview.TableView
         android:id="@+id/reminder_table"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_margin="16dp" />
 
 </FrameLayout>
