--- a/app/src/main/res/layout/fragment_reminder_table.xml
+++ b/app/src/main/res/layout/fragment_reminder_table.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,6 +10,8 @@
         android:id="@+id/reminder_table"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        app:column_header_height="25dp"
+        app:row_header_width="0dp" />
 
 </FrameLayout>
