--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,6 +7,14 @@
         <item>0</item>
         <item>1</item>
     </string-array>
+    <string-array name="theme_entries_titles">
+        <item>@string/default_theme</item>
+        <item>@string/alternative</item>
+    </string-array>
+    <string-array name="theme_entries_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
     <string-array name="overview_events_titles">
         <item>@string/four_hours</item>
         <item>@string/twelve_hours</item>
