--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,12 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="Base.Theme.MedTimer2" parent="Theme.Material3.Light">
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
     <style name="Theme.MedTimer" parent="Base.Theme.MedTimer" />
+
+    <style name="Theme.MedTimer2" parent="Base.Theme.MedTimer2" />
 </resources>
